# glot-lclm-poc

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  requirements.txt
configs/: attention_musique_qwen05.yaml  attention_squad_qwen05_8k_r4_sft.yaml  full_context_2wiki_qwen05_full_decoder_poc.yaml  full_context_lclm_2wiki_qwen4b_decoder_lora.yaml  full_context_lclm_hotpotqa_qwen4b_decoder_lora.yaml  full_context_lclm_squad_qwen4b_decoder_lora.yaml  full_context_qwen05.yaml  full_context_repeat_level5_qwen05.yaml  full_context_squad_qwen05.yaml  glot_2wiki_lclm_encoder_qwen05_full_decoder_poc.yaml  glot_lclm_2wiki_r16_pooler_decoder_lora.yaml  glot_lclm_hotpotqa_r16_pooler_decoder_lora.yaml  glot_lclm_repeat_level20_pooler_adapter_decoder_lora.yaml  glot_lclm_repeat_level5_pooler_adapter.yaml  glot_lclm_repeat_level5_pooler_adapter_decoder_lora.yaml  glot_lclm_repeat_level5_pooler_only.yaml  glot_lclm_squad_r16_pooler_adapter_decoder_lora.yaml  glot_lclm_squad_r16_pooler_decoder_lora.yaml  glot_lclm_squad_r16_pooler_only.yaml  glot_lclm_squad_r4_pooler_adapter.yaml  glot_lclm_squad_r4_pooler_adapter_decoder_lora.yaml  glot_lclm_squad_r4_pooler_only.yaml  glot_lclm_squad_r8_pooler_adapter.yaml  glot_lclm_squad_r8_pooler_adapter_decoder_lora.yaml  glot_lclm_squad_r8_pooler_only.yaml  glot_musique_qwen05.yaml  glot_repeat_level5_qwen05_r4.yaml  glot_squad_qwen05_8k_r4_sft.yaml  kvpress_snapkv_qwen05.yaml  kvpress_snapkv_squad_qwen05.yaml  mean_2wiki_lclm_encoder_qwen05_full_decoder_poc.yaml  mean_lclm_2wiki_qwen4b_r16_decoder_lora.yaml  mean_lclm_squad_qwen4b_r4.yaml  (+14 more)
(+44 files in other folders)
