[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glot-lclm"
version = "0.1.0"
description = "Task-specific latent context compression with GLOT-style graph pooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.34.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "numpy>=1.26.0",
  "peft>=0.12.0",
  "pyyaml>=6.0.1",
  "rouge-score>=0.1.2",
  "safetensors>=0.4.4",
  "sentencepiece>=0.2.0",
  "torch>=2.3.0",
  "tqdm>=4.66.0",
  "transformers>=4.45.0",
  "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]
kv = ["kvpress>=0.4.0"]
pyg = ["torch-geometric>=2.5.0", "torch-scatter>=2.1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
